# Computacion_grafica_y_OpenGL

./: .gitignore  CMakeLists.txt  vcpkg.json
Computacion_grafica_y_OpenGL/: CMakeLists.txt  Computacion_grafica_y_OpenGL.cpp
Docs/: Setup.pptx
